nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: web-app
  ports:
  - name: nginx
    port: 80
    targetPort: 80
